src/main/java/com/example/WeatherSensor/util/errors/SensorAlreadyExistsException.java
package com.example.WeatherSensor.util.errors;

public class SensorAlreadyExistsException extends RuntimeException{
}
